Correction loading JSON sur onReady + footer version mobile

--- a/src/main/webapp/static/css/breizhcamp.css
+++ b/src/main/webapp/static/css/breizhcamp.css
@@ -102,6 +102,9 @@ h3 {
          display: block !important;
      }
 
+     #footer {
+        position: relative!important;
+     }
      /* Un message personnalisé */
      body:before {
        content: "Version mobile du site";
